testdata/baselines/reference/submodule/conformance/typedefMultipleTypeParameters.errors.txt
test.ts(1,23): error TS2304: Cannot find name 'Everything'.


==== a.js (0 errors) ====
    /**
     * @template {{ a: number, b: string }} T,U A Comment
     * @template {{ c: boolean }} V uh ... are comments even supported??
     * @template W
     * @template X That last one had no comment
     * @typedef {{ t: T, u: U, v: V, w: W, x: X }} Everything
     */
    
    /** @type {Everything<{ a: number, b: 'hi', c: never }, undefined, { c: true, d: 1 }, number, string>} */
    var tuvwx;
    
    /** @type {Everything<{ a: number  }, undefined, { c: 1, d: 1 }, number, string>} */
    var wrong;
    
    /** @type {Everything<{ a: number  }>} */
    var insufficient;
    
==== test.ts (1 errors) ====
    declare var actually: Everything<{ a: number  }, undefined, { c: 1, d: 1 }, number, string>;
                          ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Everything'.
    